--- a/css/style.css
+++ b/css/style.css
@@ -201,6 +201,7 @@ opacity:0.9;
 .social-icons .fa-microphone{background-color:#3cb579;}
 .social-icons .fa-stack-exchange{background-color:#245590;}
 .social-icons .fa-stack-overflow{background-color:#FF7300;}
+.social-icons .fa-file{background-color:#FF7300;}
 .social-icons .fa-twitter,.social-icons .fa-twitter-square{background-color:#32CCFE;} 
 .social-icons .fa-youtube,.social-icons .fa-youtube-play,.social-icons .fa-youtube-square{background-color:#C52F30;}
  
